src/test/deca/codegen/invalid/resultats/var13-ima.res
  ** IMA ** ERREUR ** Ligne 158 : 
    CMP avec op1 : adresse memoire et op2 : indefini
